<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createBookingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/booking_bg"
    tools:context=".CreateBookingFragment">

    <TextView
        android:id="@+id/createBookingsTitle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/oval_shape"
        android:gravity="center"
        android:text="@string/create_booking"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/createBookingRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/createBookingRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@null"
        android:src="@drawable/current_bookings_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/add_booking_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBookingsTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/createBookingRectangle"
        app:layout_constraintEnd_toEndOf="@+id/createBookingRectangle"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/createBookingRectangle"
        app:layout_constraintTop_toTopOf="@+id/createBookingRectangle"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/venueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/venue"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/booking_venue_spinner"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/booking_time"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/black"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/bookingStartTime"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/booking_time2"
                android:inputType="none"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/endTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textColor="@color/black"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/bookingEndTime"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/booking_time2"
                android:inputType="none"
                android:padding="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/contactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/booking_contact"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/bookingTime"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="phone"
            android:hint="@string/booking_contact2"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/add_booking_btn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="273dp"
        android:backgroundTint="@color/booking_btn"
        android:text="@string/add_booking_btn"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBookingRectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>