<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/booking_bg"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/bookingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookings_title"
        android:textSize="28sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:background="@drawable/oval_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/createBookingRectangle"
        />

    <ImageView
        android:id="@+id/createBookingRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"
        android:src="@drawable/current_bookings_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingsTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:padding="10sp"
        app:layout_constraintTop_toTopOf="@+id/createBookingRectangle"
        app:layout_constraintStart_toStartOf="@+id/createBookingRectangle"
        app:layout_constraintEnd_toEndOf="@+id/createBookingRectangle"
        >

        <TextView
        android:id="@+id/currentBookingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/current_bookings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

        <TextView
            android:id="@+id/see_all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/see_all"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/createABookingButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/booking_btn"
        android:text="@string/bookings_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBookingRectangle"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>