<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/booking_bg"
    tools:context=".ShowAllBookingsFragment">

    <TextView
        android:id="@+id/allBookingsTitle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/oval_shape"
        android:gravity="center"
        android:text="@string/all_bookings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/allBookingsRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/allBookingsRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@null"
        android:src="@drawable/show_all_bookings_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/doneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allBookingsTitle"
        tools:ignore="ImageContrastCheck" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="520dp"
        app:layout_constraintBottom_toBottomOf="@+id/allBookingsRectangle"
        app:layout_constraintEnd_toEndOf="@+id/allBookingsRectangle"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="@+id/allBookingsRectangle"
        app:layout_constraintTop_toTopOf="@+id/allBookingsRectangle"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/sample_text"
            android:textColor="@color/black"
            android:textSize="20sp"

            />
    </ScrollView>

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="190dp"
        android:backgroundTint="@color/booking_btn"
        android:text="@string/done"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allBookingsRectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>